# devstack-plugin-libvirt-qemu

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  readme.md  setup.cfg  test-requirements.txt  tox.ini
devstack/: plugin.sh  settings
devstack/libs/: libvirt
devstack_plugin_libvirt_qemu/: __init__.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
releasenotes/notes/: add-support-for-centos7-8ae185ed97890707.yaml  initial_release-6ee97b0a3ef70187.yaml
releasenotes/source/: conf.py  index.rst
