[metadata]
name = devstack-plugin-libvirt-qemu
summary = OpenStack Boilerplate contains all the boilerplate you need to create an OpenStack package.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    devstack_plugin_libvirt_qemu

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = devstack_plugin_libvirt_qemu/locale
domain = devstack_plugin_libvirt_qemu

[update_catalog]
domain = devstack_plugin_libvirt_qemu
output_dir = devstack_plugin_libvirt_qemu/locale
input_file = devstack_plugin_libvirt_qemu/locale/devstack_plugin_libvirt_qemu.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = devstack_plugin_libvirt_qemu/locale/devstack_plugin_libvirt_qemu.pot
